<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">YourShopDrop</string>

    <string name="settings">Settings</string>
    <string name="lists">Your Lists</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="item_add">Add Item</string>
    <string name="item_name">Itemname</string>
    <string name="item_rename">Rename Item</string>
    <string name="list_add">Add List</string>
    <string name="list_rename">Rename List</string>
    <string name="item_quantity">Quantity</string>
    <string name="select_language">Select Language</string>


    <string name="description_AddItems">Adds items to the list</string>
    <string name="description_ShowLists">Shows a list of all your lists</string>
    <string name="description_ShowSettings">Shows the settings</string>
    <string name="description_CloseScreen">Closes the current screen</string>
    <string name="description_RenameItem">Renames the selected item</string>
    <string name="description_DeleteItem">Deletes the selected item</string>
    <string name="description_RenameList">Renames the selected list</string>
    <string name="description_DeleteList">Deletes the selected list</string>
    <string name="description_AddList">Adds a new list</string>
    <string name="description_AddItem">Adds a new item</string>
    <string name="description_OpenList">Opens the list</string>
    <string name="description_Quantity">Sets the quantity of the selected item</string>

    <string name="placeholder_title">Shoppinglist</string>
    <string name="placeholder_item" translatable="false">Item</string>
    <string name="placeholder_quantity" translatable="false">Quantity</string>

    <string-array name="quantity_units" tools:ignore="InconsistentArrays">
        <item>pcs</item>
        <item>kg</item>
        <item>g</item>
        <item>lb</item>
        <item>oz</item>
        <item>ml</item>
        <item>l</item>
    </string-array>
</resources>