<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/shape_screen"
    android:elevation="4dp"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageButton
        android:id="@+id/btnCloseScreen"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:background="@color/transparent"
        android:contentDescription="@string/description_CloseScreen"
        android:src="@drawable/ic_close"
        android:layout_margin="5dp"
        app:tint="?attr/colorOnBackground" />

    <TextView
        android:id="@+id/screenTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lists"
        android:layout_marginBottom="5dp"
        style="@style/ScreenHeader" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnAddList"
        android:background="@color/transparent"
        android:contentDescription="@string/description_AddItems"
        android:src="@drawable/ic_add"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        app:tint="?attr/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AddItemInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_new_list"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:ellipsize="end"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/item_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/screenList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

</LinearLayout>

